feat(new feature): j9 - new optional methods